[gd_scene load_steps=3 format=3 uid="uid://qwl6em84n25p"]

[ext_resource type="Script" uid="uid://bf37ntxmmh0f3" path="res://scr/user_interface/popup_window/popup_windows_content/delete_project/delete_project_popup_window_content.gd" id="1_8yxoi"]
[ext_resource type="Theme" uid="uid://bimvjqmjjj4jh" path="res://assets/resources/theme/main.tres" id="1_78ll4"]

[node name="DeleteProjectPopupWindowContent" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_78ll4")
script = ExtResource("1_8yxoi")

[node name="InfoLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "DELETE_PROJECT_WARNING_LABEL"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="DeleteProjectButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_type_variation = &"ButtonRedInverted"
text = "DELETE_PROJECT_CONFIRMATION"

[node name="CancelButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_type_variation = &"GeneratedMidtoneButton"
text = "CANCEL"

[connection signal="pressed" from="HBoxContainer/DeleteProjectButton" to="." method="_on_delete_project_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
